Fix dark mode

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 }
 body{
     height: 100vh;
-    background-color: #1f1f1f;
 }
 .container {
     width: 400px;
